--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 .App {
   text-align: center;
+  background-color: rgb(240, 235, 231);
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.news{
+  background-color: rgb(151, 173, 166)!important;
+  padding-left: 2%;
+  padding-right: 2%;
+  margin-top: auto;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,17 +20,32 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
+ /* .App-header {
+  background-color: #3b4a68;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: white; 
+} */
+.App-body{
+  padding-right: 20px;
+  padding-left: 10px;
+  align-items: center;
+  justify-content: center;
+}
+.abstract{
+align-content: center;
+}
+h1{
+  text-align: center;
 }
 
+.forms{
+  text-align: center;
+}
 .App-link {
   color: #61dafb;
 }
